# pathfinder

./: CMakeLists.txt  Makefile  README.md  astar.cc  conanfile.txt
data/: 1.board
include/: apath.hh
src/: apath.cc  astar.cc  main.cc
test/: CMakeLists.txt  test_a_star.cc
